# system-b-thesis

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.spe  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  spe_jupyter_config.py  spe_starter.ipynb  spe_startup.py  start.sh  stop.sh
.github/workflows/: ci.yml
apps/discovery_api/: main.py  suppression.py
apps/discovery_api/routers/: concepts.py  counts.py  datasets.py
apps/llm_gateway/: config.py  main.py  providers.py  skills.py  tools.py  ui.py
apps/output_airlock/: checks.py  main.py  models.py  reviewer_ui.py
apps/permit_service/: applicant_ui.py  main.py  models.py  register_ui.py  reviewer_ui.py  state_machine.py
apps/permit_service/routers/: audit.py  permits.py
apps/spe_provisioner/: main.py  projection.py  provisioner.py
apps/web/: Dockerfile  next.config.mjs  package-lock.json  package.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/apply/: page.tsx
apps/web/app/chat/: page.tsx
apps/web/app/concepts/: page.tsx
apps/web/app/datasets/: page.tsx
apps/web/app/frontend/: README.md
apps/web/components/: Nav.tsx
apps/web/lib/: api.ts
docs/: architecture.md  demo_script.md  ehds_mapping.md
redteam/: adversarial_prompts.md
shared/: audit.py  db.py  models.py  suppression.py
sql/: README.md  etl.py  load_vocab.py  schema.sql  synthea_to_omop.py
tests/: test_airlock_checks.py  test_counts_endpoint.py  test_llm_guardrails.py  test_projection.py  test_skill_synthesis.py  test_state_machine.py  test_suppression.py
thesis/: thesis.md
(+4 files in other folders)
